2018-03-15  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/78741
	* gfortran.dg/pr78741.f90: New test.

2018-03-15  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/69395
	* gfortran.dg/pr69395.f90: New test.

2018-03-15  Jakub Jelinek  <jakub@redhat.com>

	PR c++/79085
	* g++.dg/opt/pr79085.C: New test.

2018-03-15  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/84574
	* gcc.target/i386/ret-thunk-9.c: Expect __x86_return_thunk
	label instead of __x86_indirect_thunk label.

2018-03-15  Jakub Jelinek  <jakub@redhat.com>

	PR c++/84222
	* g++.dg/warn/deprecated.C (T::member3): Change dg-warning to dg-bogus.
	* g++.dg/warn/deprecated-6.C (T::member3): Likewise.
	* g++.dg/warn/deprecated-13.C: New test.

2018-03-15  Olga Makhotina  <olga.makhotina@intel.com>

	* gcc.target/i386/sgx.c (_enclv_u32): Test new intrinsic.

2018-03-15  Richard Biener  <rguenther@suse.de>

	PR c/84873
	* c-c++-common/pr84873.c: New testcase.

2018-03-15  Tamar Christina  <tamar.christina@arm.com>

	PR target/84711
	* gcc.target/arm/big-endian-subreg.c: New.

2018-03-15  Jakub Jelinek  <jakub@redhat.com>

	PR target/84860
	* gcc.c-torture/compile/pr84860.c: New test.

2018-03-15  Julia Koval  <julia.koval@intel.com>

	* gcc.target/i386/builtin_target.c (check_intel_cpu_model): Add
	cannonlake.
	(check_features): Add avx512vbmi2, gfni, vpclmulqdq, avx512vnni,
	avx512bitalg.

2018-03-15  Jakub Jelinek  <jakub@redhat.com>

	PR c/84853
	* gcc.dg/pr84853.c: New test.

2018-03-14  Carl Love  <cel@us.ibm.com>

	* gcc.target/powerpc/builtins-7-runnable.c: New test file.

2018-03-14  Martin Liska  <mliska@suse.cz>

	PR ipa/8480
	* g++.dg/lto/pr84805_0.C: New test.
	* g++.dg/lto/pr84805_1.C: New test.
	* g++.dg/lto/pr84805_2.C: New test.

2018-03-14  David Malcolm  <dmalcolm@redhat.com>

	PR c/84852
	* gcc.dg/fixits-pr84852-1.c: New test.
	* gcc.dg/fixits-pr84852-2.c: New test.

2018-03-14  Thomas Preud'homme  <thomas.preudhomme@arm.com>
