@@ -1,3 +1,11 @@
+03-16-2018  Mark Doffman  <mark.doffman@codethink.co.uk>
+            Jim MacArthur  <jim.macarthur@codethink.co.uk>
+
+	* gfortran.dg/automatic_1.f90: New test.
+	* gfortran.dg/automatic_repeat.f90: New test
+	* gfortran.dg/automatic_save.f90: New test.
+	* gfortran.dg/vax_structure.f90: New test.
+
 2018-03-15  Steven G. Kargl  <kargl@gcc.gnu.org>
 
 	PR fortran/78741
